--- a/angular/PortalOSK/src/app/calendar/org-calendar/org-calendar.component.html
+++ b/angular/PortalOSK/src/app/calendar/org-calendar/org-calendar.component.html
@@ -27,11 +27,11 @@
               <th class="cal-grid-heading">Nie</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td scope="row" class="cal-grid-cell-month  align-middle ">
+          <tbody *ngIf="calendar">
+            <tr *ngFor='let week of calendar.weeks; let i = index'>
+              <td scope="row" (click)="viewDay(day, y, week, i)" *ngFor='let day of week.days; let y = index' class="cal-grid-cell-month  align-middle ">
                 <div class="row">
-                  <div class="col">29</div>
+                  <div class="col">{{getDayInMonth(day.date)}}</div>
                   <div class="col text-right"><i class="fa fa-plus" aria-hidden="true"></i></div>
                 </div>
                 <div class="progress bg-success my-3">
@@ -39,217 +39,6 @@
                     aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
                 <p class="card-text"><small class="text-white">Wolne godziny: 7</small></p>
-              </td>
-              <td class="cal-grid-cell-month ">30
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">31
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">1
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">2
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">3
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">4
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td scope="row" class="cal-grid-cell-month">5
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">6
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">7
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">8
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">9
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">10
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">11
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td scope="row" class="cal-grid-cell-month">12
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">13
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">14
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">15
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">16
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">17
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">18
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td scope="row" class="cal-grid-cell-month">19
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">20
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">21
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">22
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">23
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">24
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">25
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td scope="row" class="cal-grid-cell-month">26
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:100%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">27
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:98%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">28
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:100%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">29
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:65%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">30
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:100%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">31 <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:0%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </td>
-              <td class="cal-grid-cell-month">1
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width:100%" aria-valuenow="40"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
               </td>
             </tr>
           </tbody>
