--- a/angular/PortalOSK/src/app/calendar/org-calendar/org-calendar.component.html
+++ b/angular/PortalOSK/src/app/calendar/org-calendar/org-calendar.component.html
@@ -35,10 +35,10 @@
                   <div class="col text-right"><i class="fa fa-plus" aria-hidden="true"></i></div>
                 </div>
                 <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
+                  <div class="progress-bar bg-danger" role="progressbar" [ngStyle]="{'width': getProgress(y, i)}" aria-valuenow="10"
                     aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <p class="card-text"><small class="text-white">Wolne godziny: 7</small></p>
+                <p  class="card-text"><small class="text-white">{{'Wolne godziny: ' + getFreeDays(y,i) }}</small></p>
               </td>
             </tr>
           </tbody>
