--- a/angular/PortalOSK/src/app/products/product-card/product-card.component.html
+++ b/angular/PortalOSK/src/app/products/product-card/product-card.component.html
@@ -33,9 +33,10 @@
             </div>
         </div>
         <hr class="bg-white mx-1">
-        <div class="row">
 
+        <div class="row">
             <div class="col my-auto border-right border-white">
+
                 <div class="media" *ngIf="currentEvent">
                     <div class="media-body">
                         <h5 class="mx-1">Następna Jazda</h5>
@@ -47,11 +48,14 @@
                     <button type="button" class="btn btn-outline-danger">Odwołaj</button>
                 </div>
                 <div class="col justify-content-center" *ngIf="!currentEvent">
-                    
-                        <div class="row"><h5 class="m-2">Nie masz umówionej żadnej jazdy!</h5></div>
-                        <div class="row"><button type="button" (click)="openModalCalendar()" class="btn btn-danger">Umów Jazdę</button></div>
-                        
-                    
+
+                    <div class="row">
+                        <h5 class="m-2">Nie masz umówionej żadnej jazdy!</h5>
+                    </div>
+                    <div class="row"><button type="button" (click)="openModalCalendar()" class="btn btn-danger">Umów
+                            Jazdę</button></div>
+
+
 
                 </div>
             </div>
@@ -72,29 +76,37 @@
         <div class="row">
 
             <div class="col my-auto border-right border-white">
+
                 <div class="media">
-                    <div class="media-body text-center">
-                        <h5 class="mx-1">30 Godzin</h5>
-                        <small class="text-white pl-1">Wykłady</small>
-                        <div class="progress m-2">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%"
-                                aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">100%</div>
-                        </div>
+                    <div class="media-body">
+                        <h4>Wykłady</h4>
+                    </div>
+                    <button type="button" (click) ='openTheorySchedule()' class="btn btn-danger mb-2">Harmonogram Wykładów</button>
+                </div>
+                <div class="text-center">
+                    <h3 class="m-4">30 Godzin</h3>
+                    <div class="progress m-2">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="50"
+                            aria-valuemin="0" aria-valuemax="100">100%</div>
                     </div>
                 </div>
             </div>
 
             <div class="col">
+
                 <div class="media">
-                    <div class="media-body text-center">
-                        <h5 class="mx-1 text-warning">30 Godzin</h5>
-                        <small class="text-white pl-1">Jazdy</small>
+                    <div class="media-body">
+                        <h4 >Jazdy</h4>
+                    </div>
+                    <button type="button" class="btn btn-danger mb-2">Harmonogram Jazd</button>
+                </div>
+                <div class="text-center">
+                        <h3 class="m-4 text-warning">30 Godzin</h3>
                         <div class="progress m-2">
                             <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="50"
                                 aria-valuemin="0" aria-valuemax="100">50%</div>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
         <hr class="bg-white mx-1">
