--- a/angular/PortalOSK/src/styles.scss
+++ b/angular/PortalOSK/src/styles.scss
@@ -48,9 +48,9 @@ body {
   font-size: 3rem;
 }
 .font-size-2-5{
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   @media screen and (min-width: 600px){
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     
   }
 }
@@ -148,4 +148,11 @@ body {
 .free-hour{
   min-width:8rem;
   cursor: pointer;
+}
+.today{
+  background-color: rgba(54, 2, 27, 1);
+}
+
+.lesson-box{
+  
 }
