--- a/angular/PortalOSK/src/app/calendar/org-calendar/org-calendar.component.html
+++ b/angular/PortalOSK/src/app/calendar/org-calendar/org-calendar.component.html
@@ -36,9 +36,12 @@
                   <div class="col">{{getDayInMonth(day.date)}}</div>
                   <div class="col text-right"><i class="fa fa-plus" aria-hidden="true"></i></div>
                 </div>
-                <div class="progress bg-success my-3">
-                  <div class="progress-bar bg-danger" role="progressbar" [ngStyle]="{'width': getProgress(day.date)}" aria-valuenow="10"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress bg-success my-3" style="max-width: 120px;">
+                    <div id="testContent" class="d-flex flex-row" style="width: 100%;">
+                        <div  *ngFor=" let interval of day.intervals ; let z = index"  [ngStyle]="{'width': getWidth()}" [ngClass]="{'used': used(interval)}" ></div>
+                      </div>
+                  <!-- <div class="progress-bar bg-danger" role="progressbar" [ngStyle]="{'width': getProgress(day.date)}" aria-valuenow="10"
+                    aria-valuemin="0" aria-valuemax="100"></div> -->
                 </div>
                 <p  class="card-text"><small class="text-white">{{'Wolne godziny: ' + getFreeDays(y,i) }}</small></p>
               </td>
