--- a/angular/PortalOSK/src/styles.scss
+++ b/angular/PortalOSK/src/styles.scss
@@ -121,9 +121,9 @@ body {
 
 
 .modal-dialog {
-  max-width: 1224px;
-  margin: 1.75rem auto;
-  min-height: 1000px;
+  //max-width: 1224px;
+  //margin: 1.75rem auto;
+ // min-height: 1000px;
   box-sizing: border-box;
 }
 .cal-grid-cell-month{
