--- a/angular/PortalOSK/src/app/calendar/event/add-calendar-event/add-calendar-event.component.html
+++ b/angular/PortalOSK/src/app/calendar/event/add-calendar-event/add-calendar-event.component.html
@@ -70,7 +70,7 @@
     </div>
 </div>
 <div class="">
-    <button class="btn btn-danger btn-block my-4" (click)="book()"><h5>Rezerwuj</h5></button>
+    <button type="button" class="btn btn-danger btn-block my-4" (click)="book()"><h5>Rezerwuj</h5></button>
 </div>
 </form>
 </div>
