--- a/angular/PortalOSK/src/app/payments/payment-add/payment-add.component.html
+++ b/angular/PortalOSK/src/app/payments/payment-add/payment-add.component.html
@@ -23,7 +23,7 @@
 
         <div class="form-group">
             <label for="amount">Kwota Wpłaty</label>
-            <input type="number" id="amount" class="form-control mb-4 shadow" formControlName="amount"
+            <input type="string" id="amount" class="form-control mb-4 shadow" formControlName="amount"
                 placeholder="Kwota">
         </div>
 
