--- a/angular/PortalOSK/src/app/customers/customer-details/customer-details.component.html
+++ b/angular/PortalOSK/src/app/customers/customer-details/customer-details.component.html
@@ -122,17 +122,16 @@
         </div>
         <div class="form-row">
         <div class="form-group col-md-3">
-            <label for="courseCategory">Kategoria Kursu</label>
+            <label for="categoriesId">Kategoria Kursu</label>
             <div>
-                <select id="courseCategory" class="form-control" formControlName="courseCategory" 
-                    aria-describedby="courseCategoryHelpBlock" required="required">
-                    <option value=""> Wybierz Kategorie</option>
-                    <option [selected]="isSelected('A')" value="A">A</option>
-                    <option [selected]="isSelected('B')" value="B">B</option >
-                    <option [selected]="isSelected('C')" value="C">C</option>
-                    <option [selected]="isSelected('C+E')" value="C+E">C+E</option>
-                    <option [selected]="isSelected('D')" value="D">D</option>
-                </select>
+                <select id="categoriesId" class="form-control" formControlName="categoriesId" 
+                aria-describedby="courseCategoryHelpBlock" required="required">
+                <option value=""> Wybierz Kategorie</option>
+                <option  *ngFor = "let category of categories" [value] ="category._id" [selected] = "isSelected(category._id)" >{{category.symbol + " - " + category.description}}</option>
+     
+            </select>
+
+
             </div>
         </div>
         <div class="form-group col-md-4">
