--- a/angular/PortalOSK/src/app/instructors/instructor-add/instructor-add.component.html
+++ b/angular/PortalOSK/src/app/instructors/instructor-add/instructor-add.component.html
@@ -1,1 +1,128 @@
-<p>instructor-add works!</p>
+<div class="">
+    <div class="card-header p-3 bg-gradient-secondary text-white">
+        <h2 class="text-center">Dodawanie Nowego Instruktora</h2>
+    </div>
+</div>
+
+<div class="card">
+    <form [formGroup]="instructor" class="m-5">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="name">Imię:</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <i class="fa fa-user"></i>
+                        </div>
+                    </div>
+                    <input id="name" formControlName="name" placeholder="Imię" type="text" required="required"
+                        class="form-control">
+                </div>
+            </div>
+
+            <div class="form-group col-md-6">
+                <label for="surname">Nazwisko:</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <i class="fa fa-user"></i>
+                        </div>
+                    </div>
+                    <input id="surname" formControlName="surname" placeholder="Nazwisko" type="text" required="required"
+                        class="form-control">
+                </div>
+            </div>
+        </div>
+        <div class="form-row"></div>
+       <div class="form-group">
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="licenceIdentifier">Numer Uprawnień:</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fa fa-address-card"></i>
+                            </div>
+                        </div>
+                        <input id="licenceIdentifier" formControlName="licenceIdentifier" placeholder="Numer Uprawnień"
+                            type="text" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="description">Dodatkowy Informacje:</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fa fa-address-card"></i>
+                            </div>
+                        </div>
+                        <input id="description" formControlName="description" placeholder="Dodatkowe Informacje"
+                            type="text" class="form-control">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="mobileNumber">Numer Telefonu</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <i class="fa fa-phone"></i>
+                        </div>
+                    </div>
+                    <input id="mobileNumber" formControlName="mobileNumber" placeholder="Numer Telefonu" type="text"
+                        class="form-control" required="required">
+                </div>
+            </div>
+            <div class="form-group col-md-6">
+                <label for="email">Adres email</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <i class="fa fa-at"></i>
+                        </div>
+                    </div>
+                    <input id="email" formControlName="email" placeholder="Adres email" type="text" class="form-control"
+                        required="required">
+                </div>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="categories">Kategorie:</label>
+                <div>
+                    <select id="categories" class="form-control" formControlName="categories"
+                        aria-describedby="courseCategoryHelpBlock" required="required" multiple="multiple">
+                        <option value=""> Wybierz Kategorie</option>
+                        <option *ngFor="let category of categories" [value]="category._id">
+                            {{category.symbol + " - " + category.description}}</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+ 
+        <div class="form-row">
+            <div class="form-group col-md-3">
+
+            </div>
+            <div class="form-group col-md-4">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="individualCourse"></label>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="individualCourse" id="individualCourse">
+                    <label class="form-check-label" for="gridCheck">
+                        Dodaj kursantów w trakcie dodawania kursu
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group float-right">
+            <button type="button" (click)="onCancel()" class="btn btn-outline-primary">Anuluj</button>
+            <button name="submit" type="button" (click)="onSubmit()" class="btn btn-primary mx-2">Dodaj
+                Kurs</button>
+
+        </div>
+    </form>
+</div>
