--- a/angular/PortalOSK/src/app/calendar/org-calendar/org-calendar.component.html
+++ b/angular/PortalOSK/src/app/calendar/org-calendar/org-calendar.component.html
@@ -38,12 +38,13 @@
                 </div>
                 <div class="progress bg-success my-3" style="max-width: 120px;">
                     <div id="testContent" class="d-flex flex-row" style="width: 100%;">
-                        <div  *ngFor=" let interval of day.intervals ; let z = index"  [ngStyle]="{'width': getWidth()}" [ngClass]="{'used': used(interval)}" ></div>
+                        <div  *ngFor=" let interval of day.intervals ; let z = index"  [ngStyle]="{'width': getWidth(),'border-right':'solid 0.2px rgba(54, 2, 27, 0.1)'}" [ngClass]="{'used': interval.used}" 
+                        ngbPopover="You see, I show up on hover!" triggers="mouseenter:mouseleave" popoverTitle="Pop title"></div>
                       </div>
                   <!-- <div class="progress-bar bg-danger" role="progressbar" [ngStyle]="{'width': getProgress(day.date)}" aria-valuenow="10"
                     aria-valuemin="0" aria-valuemax="100"></div> -->
                 </div>
-                <p  class="card-text"><small class="text-white">{{'Wolne godziny: ' + getFreeDays(y,i) }}</small></p>
+                <p  class="card-text"><small class="text-white">{{'Wolne godziny: ' + getFreeEvents(day) }}</small></p>
               </td>
             </tr>
           </tbody>
