--- a/angular/PortalOSK/src/app/calendar/calendar-day/calendar-day.component.html
+++ b/angular/PortalOSK/src/app/calendar/calendar-day/calendar-day.component.html
@@ -1,23 +1,55 @@
 <button type="button" (click)="backToMonthView()" class="btn btn-outline-primary m-2"> <i
     class="fa fa-arrow-left font-size-3 text-dark" aria-hidden="true"></i></button>
-  <div (onHide)="($event)" class="d-flex justify-content-center">
-   
-    <div class="container mx-5 shadow bg-light">
-        <div class="row shadow p-2 bg-gradient-secondary text-white">
-            <div class="col">
-              <h2 class="m-2">Kalendarz - Grzegorz Biś</h2>
-            </div>
-            <div class="col text-right">
-              <h2 class="m-2"> {{formatDay()}}</h2>
-            </div>
-          </div>
-      <div class="row">
-       <h3 class="p-4">Wolne Godziny</h3>
+<div (onHide)="($event)" class="d-flex justify-content-center">
+
+  <div class="container mx-5 shadow bg-light">
+    <div class="row shadow p-2 bg-gradient-secondary text-white">
+      <div class="col">
+        <h2 class="m-2">
+          {{'Kalendarz: '+ calendarService.getInstructor().name +' '+ calendarService.getInstructor().surname}}</h2>
       </div>
-      <div class="d-flex flex-wrap ">
-        <div
-        *ngFor="let event of freeEvents"  (click)="bookEvent(event)"
-        class="free-hour shadow display-block px-5  py-3 m-4 bg-gradient-secondary text-white"> {{formatHour(event)}}</div>
+      <div class="col text-right">
+        <h2 class="m-2"> {{formatDay()}}</h2>
       </div>
     </div>
+    <div class="row">
+      <h3 class="p-4">Wolne Godziny</h3>
+    </div>
+    <div class="d-flex flex-wrap ">
+      <div *ngFor="let event of freeEvents" (click)="bookEvent(event)"
+        class="free-hour shadow display-block px-5  py-3 m-4 bg-gradient-secondary text-white"> {{formatHour(event)}}
+      </div>
+    </div>
+    <div class="row shadow  p-2 bg-gradient-secondary text-white">
+      <div class="col text-right">
+        <h2 class="m-2"> {{formatDay()}}</h2>
+      </div>
+    </div>
+    <div class="row ">
+      <h3 class="p-4">Umówione jazdy</h3>
+    </div>
+    <div class="d-flex flex-wrap ">
+      <div class="d-flex flex-wrap ">
+        <div *ngFor="let event of usedEvents" class="free-hour shadow   m-4 ">
+          <div class=" shadow p-3 bg-gradient-secondary text-white">
+            <div class="row px-3">
+              <h4>{{formatEventDateTime(event)}}</h4>
+            </div>
+            <div *ngFor="let lesson of event.events" class="row px-3 display-inline">
+              <ul>
+                <li>{{'Kursant: ' + lesson.studentId.name + ' ' + lesson.studentId.surname}}</li>
+                <li>{{'Czas jazdy: ' +lesson.duration+' h.'}}</li>
+                <li>{{'Uwagi: ' +lesson.description}}</li>
+              </ul>
+
+            </div>
+
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
   </div>
